2005-01-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/Makefile.am
	* plug-ins/jpeg/jpeg-exif.c
	* plug-ins/jpeg/jpeg-load.c
	* plug-ins/jpeg/jpeg-save.c
	* plug-ins/jpeg/jpeg.[ch]: some code cleanup.

2005-01-06  Manish Singh  <yosh@gimp.org>

	* libgimpwidgets/gimpdialog.c: flush the display in dispose if we're
	no longer in a main loop, so the dialog doesn't hang around while
	possibly long running calculations are being done. Fixes bug #163084.

2005-01-06  Michael Schumacher <schumaml@cvs.gnome.org>

	* libgimpwidgets/gimpwidgets.def: added
	gimp_scrolled_preview_set_position 

2005-01-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/sparkle.c: applied patch from Shlomi Fish that
	fixes more regressions in Sparkle plug-in (bug #132145).

2005-01-05  DindinX  <dindinx@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.[ch]: new function:
	gimp_scrolled_preview_set_position () to set the position of the
	preview content wrt the drawable.  This function might be moved to a
	virtual function of GimpPreview in a near future.

	* libgimp/gimpdrawablepreview.c: use this function, so a preview
	remembers its position from one invocation to the next.  This is done
	using the current executable name as a key for gimp_set/get_data () so
	each plug-in can have its preview on a different place.

	More informations could be saved this way: the update toggle, the
	checks, etc.

	Addresses bug #162286.

	* libgimpwidgets/gimppreview.c: smallish cleanup.

2005-01-04  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* configure.in: add check for libexif version >= 0.6.0,
	necessary because of nasty incompatible api change.
	
	* plug-ins/jpeg/exif-handling.txt: removed from here...

	* devel-docs/exif-handling.txt: ...and added here
	
	* plug-ins/jpeg/jpeg-exif.c
	* plug-ins/jpeg/Makefile.am
	* plug-ins/jpeg/jpeg-load.c
	* plug-ins/jpeg/jpeg.c
	* plug-ins/jpeg/jpeg.h: extract info from exif on loading,
	and add info to exif on saving, addresses bug #56433,