@@ -1,3 +1,7 @@
+2005-01-07  Sven Neumann  <neumann@jpk.com>
+
+	* plug-ins/common/mail.c: just some minor formatting changes.
+
 2005-01-07  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/jpeg/Makefile.am
